syntax = "proto3";

package chatbot.ricabot;

import "google/protobuf/timestamp.proto";

service ChatbotService {
  rpc CreateConversation(CreateConversationRequest) returns (CreateConversationResponse) {}
  rpc GetConversation(GetConversationRequest) returns (GetConversationResponse) {}
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse) {}
}

// Representa a request para o método CreateConversation
message CreateConversationRequest {
  // Cria um sumário para o email informado
  string email = 1;
}

// A mensagem de resposta para o método CreateConversation
message CreateConversationResponse {
  // Conversa criada
  Conversation conversation = 1;
}

// A mensagem da request do método GetConversation
message GetConversationRequest {
  // A conversa a ser recuperada
  string conversation_id = 1;
}

// A mensagem de resposta do método GetConversation
message GetConversationResponse {
  // Representa a conversa recuperada
  Conversation conversation = 1;
}

// Payload de mensagem
message SendMessageRequest {
  // O identificador da conversa
  string conversation_id = 1;
  // A mensagem a ser enviada
  Message message = 2;
}

// A mensagem de resposta do método SendMessage.
message SendMessageResponse {
  // A mensagem a ser retornada para o usuário, sempre representará a resposta do bot.
  Message message = 1;
}

// A conversa entre o usuário e o bot
message Conversation {
  // Identificador unico da conversa
  string id = 1;
  // Data da criação da conversa
  google.protobuf.Timestamp create_time = 2;
  // O email do usuário de origem da conversa
  string email = 3;
  // As mensagens da conversa em ordem cronológica
  repeated Message messages = 4;
}

// Uma mensagem dentro da conversa
message Message {
  // Identificador unico da mensagem
  string id = 1;
  // Data de criação da mensagem
  google.protobuf.Timestamp create_time = 2;
  // O autor da conversa, pode ser o usuário ou o bot
  Author author = 3;
  // O conteúdo da mensagem
  string content = 4;
}

// O autor da mensagem
enum Author {
  // Não identificado
  AUTHOR_UNSPECIFIED = 0;
  // O usuário
  AUTHOR_USER = 1;
  // O bot
  AUTHOR_BOT = 2;
}